--- a/app/studentServer/student/views/deleteStudent.html
+++ b/app/studentServer/student/views/deleteStudent.html
@@ -1,15 +1,15 @@
-<div id="delete" ng-controller="CityCtrl">
+<div id="delete" ng-controller="StudentCtrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                <h4 class="modal-title custom_align" id="Heading">Delete this city</h4>
+                <h4 class="modal-title custom_align" id="Heading">Delete this student</h4>
             </div>
             <div class="modal-body">
 
                 <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign">
-                </span> Are you sure you want to delete Record for <b>{{name}}</b>?</div>
+                </span> Are you sure you want to delete Record for <b>{{firstname + " " + lastname}}</b>?</div>
 
             </div>
             <div class="modal-footer ">
