--- a/app/studentServer/student/views/studentsList.html
+++ b/app/studentServer/student/views/studentsList.html
@@ -18,6 +18,10 @@
         <tr ng-repeat="student in students">
             <td>{{student.id}}</td>
             <td>{{student.firstname + " " + student.lastname}}</td>
+            <td>{{student.phone}}</td>
+            <td>{{student.email}}</td>
+            <td>{{student.major.name}}</td>
+            <td>{{student.dorm.name}}</td>
             <td>
                 <a class="btn btn-primary btn-xs" href="#!editStudent/{{student.id}}">
                     <span class="glyphicon glyphicon-pencil"></span></a>
