--- a/app/studentServer/student/views/editStudent.html
+++ b/app/studentServer/student/views/editStudent.html
@@ -5,42 +5,42 @@
 
     <form>
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">FirstName:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">FirstName</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="firstname" placeholder="Trung..." required/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">LastName:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">LastName</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="lastname" placeholder="Luong..." required/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Birthday:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Birthday</label>
             <div class="col-sm-10">
                 <input type="date" class="form-control" ng-model="birthday" required/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Class:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Class</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="classname"/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Address:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Address</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="address" required/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Phone:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Phone</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="phone" placeholder="0912345678..." required/>
             </div>
@@ -48,21 +48,21 @@
 
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Email:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Email</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" ng-model="email" placeholder="abc@gmail.com..." required/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Description:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Description</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" ng-model="description"/>
             </div>
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Major:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Major</label>
             <div class="col-sm-10">
                 <select class="form-control"
                         ng-options="option.name for option in majors track by option.id"
@@ -72,7 +72,7 @@
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Dorm:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">Dorm</label>
             <div class="col-sm-10">
                 <select class="form-control"
                         ng-options="option.name for option in dorms track by option.id"
@@ -82,7 +82,7 @@
         </div>
 
         <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">City:</label>
+            <label class="col-form-label col-sm-2 font-weight-bold">City</label>
             <div class="col-sm-10">
                 <select class="form-control"
                         ng-options="option.name for option in cities track by option.id"
