--- a/app/source/css/main-page.css
+++ b/app/source/css/main-page.css
@@ -1,5 +1,5 @@
-.navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
+/*.navbar {*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    width: 100%;*/
+/*}*/
