--- a/app/source/css/post.css
+++ b/app/source/css/post.css
@@ -1,16 +1,25 @@
+/* Add a gray background color with some padding */
+body {
+    font-family: Arial;
+    /*padding: 20px;*/
+    background: #f1f1f1;
+}
+
 header{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Arial', serif;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 25px;
     text-transform: uppercase;
     display: inline-block;
     line-height: 72px;
     margin-bottom: 20px;
 }
+
 p{
     margin-top: 0;
     margin-bottom: 20px;
 }
+
 .head{
     text-align: left;
     position: relative;
@@ -24,10 +33,26 @@ p{
     padding: 12px 0 12px 0;
 }
 
-.content{
-    line-height: 35px;
+pre {
+    line-height: 30px;
     font-size: 20px;
     text-align: justify;
     font-family: 'Playfair Display', serif;
-    margin: 30px 0 0 0;
+    margin: 20px 0 0 0;
+    white-space: pre-line;
+}
+
+/* Add a card effect for articles */
+.card {
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+/* Footer */
+.footer {
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+    margin-top: 20px;
 }
