--- a/app/source/css/post.css
+++ b/app/source/css/post.css
@@ -17,7 +17,7 @@ header{
 
 p{
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 0;
 }
 
 .head{
@@ -26,11 +26,12 @@ p{
 }
 
 .subhead{
-    font-weight: initial;
+    /*font-family: 'Times New Roman', serif;*/
+    font-weight: lighter;
     text-align: right;
-    border-bottom: 2px solid #2f2f2f;
-    border-top: 2px solid #2f2f2f;
-    padding: 12px 0 12px 0;
+    border-bottom: solid #2f2f2f;
+    border-top: solid #2f2f2f;
+    padding: 10px 0 10px 0;
 }
 
 pre {
