--- a/app/postServer/post/views/addComment.html
+++ b/app/postServer/post/views/addComment.html
@@ -35,7 +35,7 @@
 
         <div class="text-right">
             <button type="submit" class="btn btn-primary btn-sm" ng-click="addComment()">Save</button>
-            <button type="button" class="btn btn-secondary btn-sm" ng-click="closeComment()">Close</button>
+            <button type="button" class="btn btn-secondary btn-sm" ng-click="back()">Close</button>
         </div>
     </form>
 
