--- a/app/postServer/post/views/addPost.html
+++ b/app/postServer/post/views/addPost.html
@@ -37,7 +37,7 @@
 
         <div class="text-right">
             <button type="submit" class="btn btn-primary btn-sm" ng-click="add()">Save</button>
-            <button type="button" class="btn btn-secondary btn-sm" ng-click="close()">Close</button>
+            <button type="button" class="btn btn-secondary btn-sm" ng-click="back()">Close</button>
         </div>
     </form>
 
