--- a/app/commentServer/comment/views/addComment.html
+++ b/app/commentServer/comment/views/addComment.html
@@ -7,7 +7,10 @@
         <div class="form-group row">
             <label class="col-form-label col-sm-2 font-weight-bold">Content</label>
             <div class="col-sm-10">
-                <textarea class="form-control" ng-model="content" rows="10" placeholder="Content..." required></textarea>
+                <textarea class="form-control" ng-model="content" rows="10" placeholder="Content..."></textarea>
+
+                <span class="text-danger">{{error}}</span>
+                
             </div>
         </div>
 
