--- a/app/studentServer/signup/views/signup.html
+++ b/app/studentServer/signup/views/signup.html
@@ -1,6 +1,6 @@
 <div class="container">
     <hr/>
-    <h3 class="font-weight-normal">Add New Student</h3>
+    <h3 class="font-weight-normal">Sign up</h3>
     <hr/>
 
     <form>
@@ -15,11 +15,6 @@
             <label class="col-form-label col-sm-2 font-weight-bold">Password</label>
             <div class="col-sm-4">
                 <input type="password" class="form-control" ng-model="password" required/>
-            </div>
-
-            <label class="col-form-label col-sm-2 font-weight-bold">Role</label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" ng-model="role" required/>
             </div>
         </div>
 
@@ -104,8 +99,7 @@
         <hr/>
 
         <div class="text-right">
-            <button type="submit" class="btn btn-primary btn-sm" ng-click="add()">Save</button>
-            <button type="button" class="btn btn-secondary btn-sm" ng-click="close()">Close</button>
+            <button type="submit" class="btn btn-primary btn-sm" ng-click="add()">Sign up</button>
         </div>
     </form>
 
