--- a/app/postServer/post/views/editComment.html
+++ b/app/postServer/post/views/editComment.html
@@ -14,7 +14,7 @@
         <div class="form-group row">
             <label class="col-form-label col-sm-2 font-weight-bold">Post</label>
             <div class="col-sm-10">
-                <select class="form-control" ng-model="post">
+                <select class="form-control" ng-model="post" ng-readonly="true">
                     <option ng-repeat="option in posts" ng-value="post = option.id">
                         {{option.title}}</option>
                 </select>
@@ -24,7 +24,7 @@
         <div class="form-group row">
             <label class="col-form-label col-sm-2 font-weight-bold">Student</label>
             <div class="col-sm-10">
-                <select class="form-control" ng-model="student">
+                <select class="form-control" ng-model="student" ng-readonly="true">
                     <option ng-repeat="option in students" ng-value="student = option.id">
                         {{option.firstname + " " + option.lastname}}</option>
                 </select>
