--- a/app/commentServer/comment/views/commentsList.html
+++ b/app/commentServer/comment/views/commentsList.html
@@ -1,6 +1,6 @@
 <div class="container">
     <br/>
-    <a href="#!addComment" class="btn btn-success btn-sm">Add New Comment</a>
+<!--    <a href="#!addComment" class="btn btn-success btn-sm">Add New Comment</a>-->
 
     <div ng-repeat="comment in comments" class="card">
         <div class="subhead">
