--- a/app/source/css/post.css
+++ b/app/source/css/post.css
@@ -59,7 +59,7 @@ pre {
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
+    /*width: 100%;*/
     padding: 20px;
     text-align: center;
     background: #ddd;
