--- a/app/postServer/post/views/addPost.html
+++ b/app/postServer/post/views/addPost.html
@@ -18,20 +18,20 @@
             </div>
         </div>
 
-        <div class="form-group row">
-            <label class="col-form-label col-sm-2 font-weight-bold">Student</label>
-            <div class="col-sm-10">
+<!--        <div class="form-group row">-->
+<!--            <label class="col-form-label col-sm-2 font-weight-bold">Student</label>-->
+<!--            <div class="col-sm-10">-->
+<!--&lt;!&ndash;                <select class="form-control" ng-model="student">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <option ng-repeat="option in students" value="{{option.id}}">&ndash;&gt;-->
+<!--&lt;!&ndash;                        {{option.firstname + " " + option.lastname}}</option>&ndash;&gt;-->
+<!--&lt;!&ndash;                </select>&ndash;&gt;-->
+
 <!--                <select class="form-control" ng-model="student">-->
-<!--                    <option ng-repeat="option in students" value="{{option.id}}">-->
+<!--                    <option ng-repeat="option in students" ng-value="student = option.id">-->
 <!--                        {{option.firstname + " " + option.lastname}}</option>-->
 <!--                </select>-->
-
-                <select class="form-control" ng-model="student">
-                    <option ng-repeat="option in students" ng-value="student = option.id">
-                        {{option.firstname + " " + option.lastname}}</option>
-                </select>
-            </div>
-        </div>
+<!--            </div>-->
+<!--        </div>-->
 
         <hr/>
 
