--- a/app/studentServer/student/views/addStudent.html
+++ b/app/studentServer/student/views/addStudent.html
@@ -50,7 +50,7 @@
         <div class="form-group row">
             <label class="col-form-label col-sm-2 font-weight-bold">Address</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="address" required/>
+                <input type="text" class="form-control" ng-model="address"/>
             </div>
         </div>
 
