--- a/app/commentServer/comment/views/commentsList.html
+++ b/app/commentServer/comment/views/commentsList.html
@@ -23,10 +23,10 @@
 
         <hr/>
 
-        <div class="text-right">
-            <a class="btn btn-primary btn-sm" href="#!editComment/{{comment.id}}">Edit</a>
-            <a class="btn btn-danger btn-sm" href="#!deleteComment/{{comment.id}}">Delete</a>
-        </div>
+<!--        <div class="text-right" ng-show="currentStudent == comment.student">-->
+<!--            <a class="btn btn-primary btn-sm" href="#!editComment/{{comment.id}}">Edit</a>-->
+<!--            <a class="btn btn-danger btn-sm" href="#!deleteComment/{{comment.id}}">Delete</a>-->
+<!--        </div>-->
 
     </div>
 
