--- a/app/studentServer/major/views/majorsList.html
+++ b/app/studentServer/major/views/majorsList.html
@@ -8,14 +8,14 @@
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Name</th>
-            <th scope="col">Action</th>
+            <th scope="col" ng-show="currentRole == 'ADMIN'">Action</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="major in majors">
             <td>{{major.id}}</td>
             <td>{{major.name}}</td>
-            <td>
+            <td ng-show="currentRole == 'ADMIN'">
                 <a class="btn btn-primary btn-sm" href="#!editMajor/{{major.id}}">Edit</a>
                 <a class="btn btn-danger btn-sm" href="#!deleteMajor/{{major.id}}">Delete</a>
             </td>
@@ -25,6 +25,6 @@
 
     <hr/>
 
-    <a href="#!addMajor" class="btn btn-success btn-sm">Add New Major</a>
+    <a href="#!addMajor" class="btn btn-success btn-sm" ng-show="currentRole == 'ADMIN'">Add New Major</a>
 
 </div>
