--- a/app/commentServer/comment/views/commentsListByStudentID.html
+++ b/app/commentServer/comment/views/commentsListByStudentID.html
@@ -1,6 +1,6 @@
 <div class="container">
     <br/>
-    <a href="#!addComment" class="btn btn-success btn-sm">Add New Comment</a>
+<!--    <a href="#!addComment" class="btn btn-success btn-sm">Add New Comment</a>-->
 
     <div ng-repeat="comment in commentsByStudentID" class="card">
         <div class="subhead">
@@ -23,10 +23,10 @@
 
         <hr/>
 
-        <div class="text-right">
-            <a class="btn btn-primary btn-sm" href="#!editComment/{{comment.id}}">Edit</a>
-            <a class="btn btn-danger btn-sm" href="#!deleteComment/{{comment.id}}">Delete</a>
-        </div>
+<!--        <div class="text-right">-->
+<!--            <a class="btn btn-primary btn-sm" href="#!editComment/{{comment.id}}">Edit</a>-->
+<!--            <a class="btn btn-danger btn-sm" href="#!deleteComment/{{comment.id}}">Delete</a>-->
+<!--        </div>-->
 
     </div>
 
